# ThothQT

./: HEATMAP_USAGE.md  INVESTIGATION_PROTOCOL.md  LANTHANIDE_GUIDE.md  PERFORMANCE_OPTIMIZATION.md  README.md  ROOM_TEMPERATURE_SENSOR_PROTOCOL.md  SCF_ANALYSIS.md  SYSTEM_SIZE_GUIDE.md  TEMPERATURE_COST_EXPLANATION.md  TEST_ALL_HEATMAP_FUNCTIONALITY.ps1  graphene_negf_results_20251010_210129.json  graphene_negf_results_20251010_210353.json  graphene_negf_results_20251010_210653.json  graphene_negf_results_20251010_210958.json  graphene_negf_results_20251010_211050.json  graphene_negf_results_20251010_211142.json  graphene_negf_results_20251010_211557.json  graphene_negf_results_20251010_212051.json  graphene_negf_results_20251010_214014.json  graphene_negf_results_20251010_220308.json  graphene_negf_results_20251010_231100.json  graphene_negf_results_20251010_232958.json  graphene_tb_Tb_SW_negf.py  lanthanide_demo.py  negf_core.py  performance_test.py  poisson_solver.py  scf_solver.py  test_band_structure.py  test_fast_path.py  test_heatmap_demo.py  test_improved_analysis.py  test_negf.py  timing_analysis.py  verify_cpp_backend.py
ThothQT/: COMPLETE_VALIDATION_SUCCESS.md  FINAL_VALIDATION_SUMMARY.md  README.md  SUCCESS_SUMMARY.md  VALIDATION_RESULTS.md  __init__.py  builders.py  clean_plots.py  compare_thothqt_kwant.py  complete_comparison.py  core_demo.py  utils.py  (+20 more)
cpp/: CMakeLists.txt  README.md  graphene_tb_Tb_SW_negf.py  negf_core.py  poisson_solver.py  pyproject.toml  scf_solver.py  test_cpp_backend.py  verify_cpp_backend.py
cpp/native/: CMakeLists.txt  negf.cpp
(+52 files in other folders)
